--- a/IVSoftware.Portable.Xml.Linq.XBoundObject/IVSoftware.Portable.Xml.Linq.XBoundObject.csproj
+++ b/IVSoftware.Portable.Xml.Linq.XBoundObject/IVSoftware.Portable.Xml.Linq.XBoundObject.csproj
@@ -19,8 +19,8 @@
 		<SignAssembly>True</SignAssembly>
 		<AssemblyOriginatorKeyFile>D:\PFX\ivsoft-240410.pfx</AssemblyOriginatorKeyFile>
 		<DebugType>embedded</DebugType>
-		<BaseVersion>1.2.7</BaseVersion>
-		<VersionPrefix>$(BaseVersion)</VersionPrefix>
+		<BaseVersion>1.2.9</BaseVersion>
+		<VersionPrefix>$(BaseVersion)-beta</VersionPrefix>
 	</PropertyGroup>
 	<ItemGroup>
 	  <Compile Remove="Screenshots\**" />
