--- a/IVSoftware.Portable.Xml.Linq.XBoundObject/IVSoftware.Portable.Xml.Linq.XBoundObject.csproj
+++ b/IVSoftware.Portable.Xml.Linq.XBoundObject/IVSoftware.Portable.Xml.Linq.XBoundObject.csproj
@@ -20,7 +20,7 @@
 		<AssemblyOriginatorKeyFile>D:\PFX\ivsoft-240410.pfx</AssemblyOriginatorKeyFile>
 		<DebugType>embedded</DebugType>
 		<BaseVersion>1.3.0</BaseVersion>
-		<VersionPrefix>$(BaseVersion)-local2</VersionPrefix>
+		<VersionPrefix>$(BaseVersion)-prerelease</VersionPrefix>
 	</PropertyGroup>
 	<ItemGroup>
 	  <Compile Remove="Screenshots\**" />
