--- a/IVSoftware.Portable.Xml.Linq.XBoundObject/IVSoftware.Portable.Xml.Linq.XBoundObject.csproj
+++ b/IVSoftware.Portable.Xml.Linq.XBoundObject/IVSoftware.Portable.Xml.Linq.XBoundObject.csproj
@@ -29,7 +29,7 @@
 		<AssemblyOriginatorKeyFile>D:\PFX\ivsoft-240410.pfx</AssemblyOriginatorKeyFile>
 		<DebugType>embedded</DebugType>
 		<BaseVersion>2.0.0</BaseVersion>
-		<VersionPrefix>$(BaseVersion)-local1</VersionPrefix>
+		<VersionPrefix>$(BaseVersion)-local2</VersionPrefix>
 	</PropertyGroup>
 	<ItemGroup>
 	  <Compile Remove="Screenshots\**" />
@@ -48,5 +48,6 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="IVSoftware.Portable.Threading" Version="1.3.1" />
+		<PackageReference Include="IVSoftware.Portable.WatchdogTimer" Version="1.2.1" />
 	</ItemGroup>
 </Project>
