CRITICAL FIX (from beta version) fix this->sender in OnPropertyChanged(sender, e)

--- a/IVSoftware.Portable.Xml.Linq.XBoundObject/IVSoftware.Portable.Xml.Linq.XBoundObject.csproj
+++ b/IVSoftware.Portable.Xml.Linq.XBoundObject/IVSoftware.Portable.Xml.Linq.XBoundObject.csproj
@@ -35,7 +35,7 @@
 		<AssemblyOriginatorKeyFile>D:\PFX\ivsoft-240410.pfx</AssemblyOriginatorKeyFile>
 		<DebugType>embedded</DebugType>
 		<BaseVersion>2.0.3</BaseVersion>
-		<VersionPrefix>$(BaseVersion)-beta</VersionPrefix>
+		<VersionPrefix>$(BaseVersion)-prerelease</VersionPrefix>
 	</PropertyGroup>
 	<ItemGroup>
 	  <Compile Remove="Screenshots\**" />
