--- a/IVSoftware.Portable.Xml.Linq.XBoundObject/IVSoftware.Portable.Xml.Linq.XBoundObject.csproj
+++ b/IVSoftware.Portable.Xml.Linq.XBoundObject/IVSoftware.Portable.Xml.Linq.XBoundObject.csproj
@@ -17,8 +17,11 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<PackageReleaseNotes>
-			Major (non-breaking) change in 2.0.3:
+			Major (non-breaking) changes in 2.0.3:
 			- OnPropertyChanged([CallerMemberName] overload now laterals to a proper (sender, e) signature.
+			- DualKeyLookup is now observable.
+			- DualKeyLookup now respects @throw on the setter for "overwrite existing mapping with a different value".
+			- ADDED: DualKeyLookup.BeforeModifyMapping where such overwrites may be cancelled or globally thrown.
 			Minor changes in 2.0.2:
 			- The DualKeyLibrary now provides an EnumKeys property, allowing external management.
 			Minor changes in 2.0.1:
