--- a/IVSoftware.Portable.Xml.Linq.XBoundObject/IVSoftware.Portable.Xml.Linq.XBoundObject.csproj
+++ b/IVSoftware.Portable.Xml.Linq.XBoundObject/IVSoftware.Portable.Xml.Linq.XBoundObject.csproj
@@ -1,8 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<Title>IVSoftware.Portable.Xml.Linq.XBoundObject</Title>
-		<Description>A lightweight extension for System.Xml.Linq that provides a Tag property for XAttribute, enabling runtime object storage and action binding.</Description>
-		<PackageTags>portable;net;android;ios;xml</PackageTags>
+		<Description>
+			A lightweight extension for System.Xml.Linq that adds runtime object binding, hierarchical modeling, and flexible path resolution via enriched XAttribute support. Includes enum-based metadata, tree construction from flat paths, and event-driven behaviors — ideal for dynamic UIs, workflows, and cross-platform .NET apps. (Ever wish XAttribute had a Tag property? Now it does.)
+		</Description>
+		<PackageTags>
+			xml;linq;system.xml.linq;xattribute;tag;object-binding;modeling;enum;enum-parsing;enum-hierarchy;nested-enums;enum-polymorphism;portable;netstandard;dotnet;cross-platform;ui-frameworks;path-resolution;tree-construction;hierarchical-data
+		</PackageTags>
 		<RepositoryUrl>https://github.com/IVSoftware/IVSoftware.Portable.Xml.Linq.XBoundObject.git</RepositoryUrl>
 		<PackageProjectUrl>https://github.com/IVSoftware/IVSoftware.Portable.Xml.Linq.XBoundObject.git</PackageProjectUrl>
 		<RootNamespace>IVSoftware.Portable.Xml.Linq</RootNamespace>
@@ -15,30 +19,29 @@
 		<Version>$(AssemblyVersion)</Version>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>		
 		<PackageReleaseNotes>
-			Major (non-breaking) changes in 2.0.3:
+			Stable release 2.0.3
+			
 			- OnPropertyChanged([CallerMemberName] overload now laterals to a proper (sender, e) signature.
 			- DualKeyLookup is now observable.
 			- DualKeyLookup now respects @throw on the setter for "overwrite existing mapping with a different value".
-			- ADDED: DualKeyLookup.BeforeModifyMapping where such overwrites may be cancelled or globally thrown.
-			Minor changes in 2.0.2:
-			- The DualKeyLibrary now provides an EnumKeys property, allowing external management.
-			Minor changes in 2.0.1:
-			- Non-breaking change obsoletes TryGetBoundAttributeOfType(out T object) in favor of TryGetBoundObjectOfType(out T object) and TryGetBoundAttributeOfType(out XBoundAttribute, out T object)
-			New in 2.0:
+			- Added DualKeyLookup.BeforeModifyMapping for intercepting or canceling overwrites.
+			
+			2.0.x
 			- Added Placer extensions for path-based XML element placement.
 			- Enhanced enum support with safety asserts for non-nullable named enum types in edge cases.
 			- New [Placement] attribute for Enum allows individual enum types to declare their own storage as either XElement or XBoundAttribute.
 			- All try methods are idiomatically correct now. Any 'bool @throw = false' arguments have been removed from the signature. We're banking on the notion that if you're calling a Try method that you don't really want it to ever throw. These 'did' serve a purpose because internally they supported the @throw attribute of methods like To T. These reasons are no longer valid and the artifacts have been removed. Please report on the repo if this causes any issues.
 			- Trailing path delimiters on fqpath (Placer and Place) are removed now.
 			- Unit testing in this release is improved with broader coverage. See repos not only for the testing details, but for the working insights these tests provide on using the modules.
+			- Minor 2.0.x improvements include enum key exposure and enhanced XML placement APIs.
 		</PackageReleaseNotes>
 		<SignAssembly>True</SignAssembly>
 		<AssemblyOriginatorKeyFile>D:\PFX\ivsoft-240410.pfx</AssemblyOriginatorKeyFile>
 		<DebugType>embedded</DebugType>
 		<BaseVersion>2.0.3</BaseVersion>
-		<VersionPrefix>$(BaseVersion)-prerelease</VersionPrefix>
+		<VersionPrefix>$(BaseVersion)</VersionPrefix>
 	</PropertyGroup>
 	<ItemGroup>
 	  <Compile Remove="Screenshots\**" />
@@ -56,8 +59,8 @@
 		</None>
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="IVSoftware.Portable.Disposable" Version="1.2.0" />
-		<PackageReference Include="IVSoftware.Portable.Threading" Version="1.3.1" />
-		<PackageReference Include="IVSoftware.Portable.WatchdogTimer" Version="1.3.0-prerelease" />
+		<PackageReference Include="IVSoftware.Portable.Disposable" Version="*" />
+		<PackageReference Include="IVSoftware.Portable.Threading" Version="*" />
+		<PackageReference Include="IVSoftware.Portable.WatchdogTimer" Version="1.3.0" />
 	</ItemGroup>
 </Project>
