--- a/MSTestProject/XBoundObjectMSTest.csproj
+++ b/MSTestProject/XBoundObjectMSTest.csproj
@@ -23,7 +23,7 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)' == 'Release'">
-		<PackageReference Include="IVSoftware.Portable.Xml.Linq.XBoundObject" Version="*" />
+		<PackageReference Include="IVSoftware.Portable.Xml.Linq.XBoundObject" Version="2.0.3" />
 	</ItemGroup>
 
     <ItemGroup>
